replace the term "submissions" with "uploads"
also remove remaining chip chillipedia leftovers

--- a/private/skins/biscuit/templates/admin.twig
+++ b/private/skins/biscuit/templates/admin.twig
@@ -146,7 +146,7 @@
 			data: {
 				datasets: [
 					{
-						label: 'Submissions',
+						label: 'Uploads',
 						data: [
 							{% for graph in data.graph_data.submissions %}
 							{
