--- a/private/skins/biscuit/templates/components/_index_user.twig
+++ b/private/skins/biscuit/templates/components/_index_user.twig
@@ -19,7 +19,7 @@
                     {% endif %}
                     <br>
                     <small>
-                        {{ user.submissions }} submissions · {{ user.journals }} journals
+                        {{ user.submissions }} uploads · {{ user.journals }} journals
                     </small>
                 </div>
             </td>
