--- a/private/skins/bootstrap/templates/profile.twig
+++ b/private/skins/bootstrap/templates/profile.twig
@@ -56,7 +56,7 @@
                         {% for submission in data.submissions %}
                             {{ include('/components/smallvideobox.twig') }}
                         {% else %}
-                            <p>There are currently no videos uploaded by %s.", [data.username]) }}</p>
+                            <p>There are currently no uploads by %s.", [data.username]) }}</p>
                         {% endfor %}
                     </div>
                 </div>
