--- a/private/skins/finalium/templates/admin.twig
+++ b/private/skins/finalium/templates/admin.twig
@@ -38,9 +38,9 @@
 				</td>
 				<td class="nb" style="width:33%; vertical-align:top;">
 					<table class="c1">
-						<caption>Latest submissions</caption>
+						<caption>Latest uploads</caption>
 						<tr class="h">
-							<th class="b" colspan="2">Latest submissions</td>
+							<th class="b" colspan="2">Latest uploads</td>
 						</tr>
 						{% for video in videos %}
 							<tr>
