--- a/private/skins/finalium/templates/users.twig
+++ b/private/skins/finalium/templates/users.twig
@@ -11,7 +11,7 @@
 			<tr>
 				<th style="width:80px">Profile picture</th>
 				<th>Username</th>
-				<th style="width:80px">Submissions</th>
+				<th style="width:80px">Uploads</th>
 				<th style="width:80px">Journals</th>
 			</tr>
 			{% for user in users.users %}
