--- a/private/skins/biscuit/templates/users.twig
+++ b/private/skins/biscuit/templates/users.twig
@@ -33,7 +33,7 @@
 										{% endif %}
 										<br>
 										<small>
-											{{ user.submissions }} submissions · {{ user.journals }} journals
+											{{ user.submissions }} uploads · {{ user.journals }} journals
 										</small>
 									</div>
 								</td>
