--- a/private/skins/finalium/templates/components/beta/_footer.twig
+++ b/private/skins/finalium/templates/components/beta/_footer.twig
@@ -3,7 +3,7 @@
     <p>
         <b>By the OpenSB contributors</b> · 2021-{{ 'now' | date('Y') }} |
         <b>Users registered</b>: {{ footer_stats.users }} |
-        <b>Submissions uploaded</b>: {{ footer_stats.submissions }}
+        <b>Uploads uploaded</b>: {{ footer_stats.submissions }}
     </p>
     <h5><a href="/version.php">Git Commit {{ opensb_version }}</a><br></h5>
     <a href="/privacy">Privacy Policy</a> | <a href="/theme">Change theme</a>
