--- a/private/skins/finalium/templates/stats.twig
+++ b/private/skins/finalium/templates/stats.twig
@@ -21,7 +21,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="statbox">
-                            <div class="stat-title">Submissions</div>
+                            <div class="stat-title">Uploads</div>
                             {{ stats.videocount }}
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                 type: 'line',
                 data: {
                     datasets: [{
-                        label: 'Submissions',
+                        label: 'Uploads',
                         data: [
                             {% for graph in video_graph_data %}
                             {
