--- a/scss/biscuit/shared/_base_variables.scss
+++ b/scss/biscuit/shared/_base_variables.scss
@@ -7,7 +7,7 @@ $threshold: 75%; // contrast threshold
 $primary: #3498db; // primary color
 $primary-darker: darken($primary, 33%); // darker primary color
 $secondary: #f5f5f5; //secondary color (nearly white)
-$green: #32cd32;
+$green: #22c522;
 $yellow: #ffc107;
 $red: #dc143c;
 
