new biscuit design be dropping (WIP!)

--- a/private/skins/biscuit/templates/_layout.twig
+++ b/private/skins/biscuit/templates/_layout.twig
@@ -3,7 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title }} - {{ website_branding.name }}</title>
+    {% if title %}
+        <title>{{ title }} - {{ website_branding.name }}</title>
+    {% else %}
+        <title>{{ website_branding.name }}</title>
+    {% endif %}
     <link rel="manifest" href="{{ website_branding.assets_location }}/icons/site.webmanifest">
     <link rel="shortcut icon" href="{{ website_branding.assets_location }}/icons/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="{{ website_branding.assets_location }}/icons/apple-touch-icon.png">
@@ -12,7 +16,7 @@
     <meta name="apple-mobile-web-app-title" content="{{ website_branding.name }}">
     <meta name="application-name" content="{{ website_branding.name }}">
     <link rel="stylesheet" href="/assets/css/{{ current_theme }}.css?r={{ get_css_file_date() }}">
-    <meta name="theme-color" content="#FF8A00">
+    <meta name="theme-color" content="#3E6DDC">
     <meta property="og:title" content="{{ title }}" />
     <meta property="og:url" content="{{ page_url }}">
     <meta property="og:site_name" content="{{ website_branding.name }}" />
