--- a/private/skins/biscuit/templates/components/default/header.twig
+++ b/private/skins/biscuit/templates/components/default/header.twig
@@ -3,28 +3,28 @@
         <div class="header-container">
             <div class="header-logo">
                 <a href="/">
-                    <img alt="{{ website_branding.name }}" class="logo" src="{{ website_branding.assets_location }}/logo-wordmark.png">
+                    <img alt="{{ website_branding.name }}" class="logo" src="{{ website_branding.assets_location }}/logo-wordmark-dark.png">
                     <img alt="{{ website_branding.name }}" class="logo-small" src="{{ website_branding.assets_location }}/logo.png">
                 </a>
             </div>
             {% for link in header_main_links() %}
                 <a class="menulink" href="{{ link.url }}">{{ link.name }}</a>
             {% endfor %}
-            <form class="header-search form-flex" action="/search">
+            <form class="header-search" action="/search">
                 <input id="header-search-input" type="text" name="query" placeholder="Search...">
-                <div class="form-button-container">
-                    <button id="header-search-button" class="button button-secondary">
-                        <i class="bi bi-search"></i>
-                    </button>
-                </div>
+                <button id="header-search-button">
+                    <i class="bi bi-search"></i>
+                </button>
             </form>
             <div class="header-links">
                 {% if is_user_logged_in %}
                     <!--<a class="menulink" href="/notices">{{ user_notice_data }} notifications</a>-->
-                    <a class="menulink username" href="/user/{{ user_data.name }}">{{ user_data.name }}</a>
-                    <div class="header-links-menu-container">
-                        <div class="menuButton" data-menu-id="user-menu">
-                            <img src="{{ profile_picture(user_data.name) }}" class="pfp" alt="{{ user_data.name }}">
+                    <div class="user-menu-container">
+                        <div class="menu-button user-menu-button" data-menu-id="user-menu">
+                            <img src="{{ profile_picture(user_data.name) }}" class="user-menu-pfp" alt="{{ user_data.name }}">
+                            <div class="menu-caret-container user-menu-caret-container">
+                                <i class="bi bi-caret-down-fill menu-caret"></i>
+                            </div>
                         </div>
                         <div class="menu" id="user-menu">
                             {% for link in header_user_links() %}
@@ -32,9 +32,6 @@
                             {% endfor %}
                         </div>
                     </div>
-                    <!-- <div class="header-links-caret">
-                        <i class="bi bi-caret-down-fill"></i>
-                    </div> -->
                 {% else %}
                     {% for link in header_user_links() %}
                         <a class="menulink" href="{{ link.url }}">{{ link.name }}</a>
