--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -1,17 +1,5 @@
 {% extends "_layout.twig" %}
 
-{% set title = "Home" %}
-
-{% if is_chaziz_sb %}
-    {% if is_fulptube %}
-        {% set site_name = '<span style="font-weight: 400;">Fulp</span><span style="font-weight: 800;">Tube</span>' %}
-    {% else %}
-        {% set site_name = '<span style="font-weight: 400;">square</span><span style="font-weight: 800;">bracket</span>' %}
-    {% endif %}
-{% else %}
-    {% set site_name = website_branding.name %}
-{% endif %}
-
 {# hack to prevent twig from outputing the number 1 #}
 {% if is_user_logged_in %}
     {% if data.totals.followers != 1 %}
@@ -60,7 +48,7 @@
                         <div class="jumbotron-logged-in">
                             <img src="{{ profile_picture(user_data.name) }}" class="pfp" alt="{{ user_data.name }}">
                             <div class="jumbotron-logged-in-text">
-                                <h1>Welcome to {{ site_name | raw }}, {{ user_data.title }}</h1>
+                                <h1>Welcome to {{ website_branding.name }}, {{ user_data.title }}</h1>
                                 <p>@{{ user_data.name }}</p>
                                 <p>{{ data.totals.followers ?? "no" }} follower{{ pluralSubscribers }}
                                     • {{ data.totals.views ?? "no" }} view{{ pluralViews }}</p>
@@ -68,7 +56,7 @@
                         </div>
                     {% else %}
                         <div class="jumbotron-logged-out">
-                            <h2>Welcome to {{ site_name | raw }}</h2>
+                            <h1>Welcome to {{ website_branding.name }}</h1>
                             {% if is_chaziz_sb %}
                                 <p>Your content, your narration, your niche on the web.</p>
                             {% else %}
