--- a/scss/biscuit/default/_buttons.scss
+++ b/scss/biscuit/default/_buttons.scss
@@ -6,7 +6,6 @@
   font-family: $font;
   display: inline-block;
   cursor: pointer;
-  transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease;
   text-decoration: none;
 
   &:hover {
@@ -28,15 +27,18 @@
   .button-#{$color} {
     border: 1px solid darken($value, 9%);
     background-color: $value;
+    @include gradient-y($start-color: lighten($value, 2.5%), $end-color: $value);
     color: contrast-color($value, #000, #fff);
 
     &:hover {
       background-color: lighten($value, 10%);
+      @include gradient-y($start-color: lighten($value, 10%), $end-color: lighten($value, 1.5%));
       border-color: darken($value, 10%);
     }
 
     &:active {
       background-color: darken($value, 5%);
+      @include gradient-y($start-color: $value, $end-color: lighten($value, 5%));
       border-color: darken($value, 12%);
     }
   }
