--- a/scss/biscuit/default/_content_box.scss
+++ b/scss/biscuit/default/_content_box.scss
@@ -1,7 +1,6 @@
 .thumbnail
 {
-    border-radius: 4px;
-    border: 1px solid $content-box-border-color;
+    border: 1px solid $image-border-color;
 }
 
 .content-header
@@ -57,6 +56,15 @@
         }
 
         .content-info {
+            .content-title {
+                font-size: 13px;
+            }
+
+            .content-description {
+                font-size: 11px;
+                margin-bottom: 8px;
+            }
+
             .content-rating {
                 font-size: 12px;
                 .rating-spacing {
@@ -155,15 +163,4 @@
             }
         }
     }
-}
-
-.content-title
-{
-    font-size: 13px;
-}
-
-.content-description
-{
-    font-size: 11px;
-    margin-bottom: 10px;
 }
