--- a/scss/biscuit/default/_header.scss
+++ b/scss/biscuit/default/_header.scss
@@ -2,7 +2,6 @@
   position: sticky;
   top: 0;
   z-index: 47101;
-  backdrop-filter: blur(4px);
 }
 
 .header-links
@@ -12,27 +11,31 @@
   display: flex;
   align-items: center;
 
-  .header-links-menu-container {
+  .user-menu-container {
     direction: rtl;
-  }
 
-  .header-links-username {
-    @include responsive('medium') {
-      display: block;
-    }
-    display: none;
-    margin-right: 10px;
-    font-size: 12px;
-  }
+    .user-menu-button {
+      height: $header-height;
+      padding: 5px;
+      direction: ltr;
+      display: flex;
+      gap: 5px;
+      align-items: center;
 
-  .header-links-caret {
-    margin-left: 2px;
-    font-size: 10px;
-  }
+      &:hover, &.selected {
+        background: rgba(white, 0.1);
+        cursor: pointer;
+      }
 
-  .menuButton {
-    .pfp {
-      width: 32px;
+      .user-menu-pfp {
+        width: $header-pfp-width;
+      }
+
+      .user-menu-caret-container {
+        display: inline-block;
+        font-size: 10px;
+        color: #7B7B7B;
+      }
     }
   }
 }
@@ -69,7 +72,38 @@
 
 form.header-search
 {
+  position: relative;
   display: none;
+
+  #header-search-button {
+    position: absolute;
+    right: 0;
+
+    background: none;
+    border: none;
+
+    color: #B4B4B4;
+
+    height: 30px;
+    width: 34px;
+  }
+
+  #header-search-input {
+    border: 1px solid black;
+    color: #eee;
+    background: #575757;
+    box-shadow: 0 1px 0 #333;
+
+    padding: 6px 40px 6px 6px;
+
+    height: 30px;
+
+    &:focus {
+      background: #eee;
+      color: #222;
+      box-shadow: 0 1px 0 #000;
+    }
+  }
 
   @include responsive('tiny') {
     max-width: 120px;
@@ -92,10 +126,6 @@ form.header-search
     }
   }
 
-  #header-search-input {
-    padding: 6px;
-  }
-
   .form-button-container {
     display: inline;
   }
@@ -108,9 +138,10 @@ td.h
 
 .menulink
 {
-  color: black;
-  margin: 0 7px;
-  font-size: 14px;
+  color: white;
+  margin: 0 6px;
+  font-weight: bold;
+
   &.username {
     display: none;
 
@@ -133,8 +164,21 @@ td.h
   }
 
   width: 100%;
-  background-color: rgba(white, 0.95);
-  height: $header-main-height;
+  background: linear-gradient(to bottom, #333, #111);
+  box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+  height: $header-height;
   display: flex;
-  border-bottom: 1px solid lightgrey;
+}
+
+.menu#user-menu {
+  background: #2A2A2A;
+  border: none;
+  min-width: 165px;
+  top: $header-height;
+  border-radius: 0 0 5px 5px;
+  box-shadow: 0 1px 2px rgba(black, 0.6);
+
+  .menu-item-button {
+    color: white;
+  }
 }
