--- a/private/skins/biscuit/templates/components/default/header.twig
+++ b/private/skins/biscuit/templates/components/default/header.twig
@@ -30,6 +30,14 @@
                             {% for link in header_user_links() %}
                                 <a class="menu-item-button" href="{{ link.url }}">{{ link.name }}</a>
                             {% endfor %}
+                            <hr>
+                            {% for link in header_user_account_links() %}
+                                <a class="menu-item-button" href="/login/{{ link.username }}">
+                                    <img src="{{ profile_picture(link.username) }}" class="menu-item-profile-picture" alt="{{ link.username }}">
+                                    {{ link.username }}
+                                </a>
+                            {% endfor %}
+                            <a class="menu-item-button small" href="/login.php">Login into another account</a>
                         </div>
                     </div>
                 {% else %}
