--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -62,7 +62,7 @@
                             {% else %}
                                 <p>Insert slogan.</p>
                             {% endif %}
-                            <a href="/register.php" class="button button-primary">Get started ›</a>
+                            <a href="/register.php" class="button button-get-started button-big">Get started ›</a>
                         </div>
                     {% endif %}
                 </div>
