--- a/scss/biscuit/default/_menus.scss
+++ b/scss/biscuit/default/_menus.scss
@@ -4,17 +4,25 @@
   position: absolute;
   background-color: $content-box-background-color;
   border: 1px solid $content-box-border-color;
-  padding: 5px 10px;
+  padding: 5px 0;
   min-width: 100px;
   z-index: 5259;
 
   .menu-item-button {
-    display: block;
+    direction: ltr;
+    display: flex;
+    align-items: center;
     text-align: left;
-    padding: 5px 0;
+    padding: 5px 10px;
     color: rgba(black, 80%);
+    gap: 5px;
     &:hover {
       color: black;
+    }
+
+    .menu-item-profile-picture {
+      width: 24px;
+      border: 1px solid $image-border-color;
     }
   }
 }
