--- a/scss/biscuit/default/_banner.scss
+++ b/scss/biscuit/default/_banner.scss
@@ -3,6 +3,8 @@
   display: flex;
   align-items: center;
   border-radius: 2px;
+  box-shadow: 0 1px 2px rgba(black, 0.2);
+  margin-bottom: 5px;
 
   .notification-icon {
     margin-right: 6px;
@@ -11,11 +13,13 @@
 
 @each $color, $value in $color-map {
   .banner-#{$color} {
-    background-color: $value;
+    @include gradient-y($start-color: lighten($value, 4%), $end-color: darken($value, 4%));
+    border: 1px solid darken($value, 4%);
     color: contrast-color($value, #000, #fff);
 
     a {
       text-decoration: underline;
+      color: contrast-color($value, #000, rgba(white, 0.7));
     }
   }
 }
