--- a/scss/biscuit/default/_header.scss
+++ b/scss/biscuit/default/_header.scss
@@ -178,7 +178,21 @@ td.h
   border-radius: 0 0 5px 5px;
   box-shadow: 0 1px 2px rgba(black, 0.6);
 
+  hr {
+    border-color: #777;
+    margin: 4px 0;
+  }
+
   .menu-item-button {
     color: white;
+
+    &.small {
+      font-size: 11px;
+    }
+
+    &:hover {
+      background: rgba(white, 0.1);
+      text-decoration: none;
+    }
   }
 }
